link bundled js to popup

--- a/popup.html
+++ b/popup.html
@@ -1,1 +1,13 @@
-<p>This is a popup.</p>
+<!doctype html>
+<html>
+
+<head>
+  <title>Zuck Sucks</title>
+</head>
+
+<body>
+  <script src="popup.js"></script>
+  <button id='start_button'>Does nothing</button>
+</body>
+
+</html>
