--- a/popup.html
+++ b/popup.html
@@ -7,8 +7,8 @@
 
 <body>
   <script src="popup.js"></script>
-  <h1>Zuck Sucks</h1>
-  <p>Thank you for choosing Zuck Sucks - the number one way to tackle your Facebook addiction.
+  <h1>ZuckMuck</h1>
+  <p>Thank you for choosing ZuckMuck - the number one way to tackle your Facebook addiction.
     Use this form to configure your daily allowance of uninterrupted Facebook time.
   </p>
   <form>
