Add banner to popup.

--- a/popup.html
+++ b/popup.html
@@ -2,13 +2,18 @@
 <html>
 
 <head>
-  <title>Zuck Sucks</title>
+  <title>ZuckSucks</title>
+  <style>
+    html, body, p, button {
+      font-family: sans-serif;
+    }
+  </style>
 </head>
 
 <body>
   <script src="popup.js"></script>
-  <h1>ZuckMuck</h1>
-  <p>Thank you for choosing ZuckMuck - the number one way to tackle your Facebook addiction.
+  <h1><img src='icon/zucks-banner.svg' alt="ZuckSucks" /></h1>
+  <p>Thank you for choosing ZuckSucks - the number one way to tackle your Facebook addiction.
     Use this form to configure your daily allowance of uninterrupted Facebook time.
   </p>
   <form>
